--- a/BACK_END/package.json
+++ b/BACK_END/package.json
@@ -10,13 +10,15 @@
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
     "require": "^0.4.4",
+    "socket.io": "^4.8.1",
     "tesseract.js": "^6.0.0"
   },
   "name": "back_end",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
